Implement a macro_rules! and a proc_macro for route generation

--- a/examples/routing/Cargo.toml
+++ b/examples/routing/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 
 [dependencies]
 yew = { path = "../.." }
+proc_macro = {path = "../../proc_macro"}
